extends Control
# ResultScreenImproved - ê°œì„ ëœ ê²°ê³¼ í™”ë©´

# UI ìš”ì†Œë“¤
@onready var result_title: Label = $Header/VBox/Title
@onready var result_message: Label = $Header/VBox/Message
@onready var continue_button: Button = $BottomBar/ContinueButton

# ê²°ê³¼ ë°ì´í„°
var result_data: Dictionary = {}


func _ready():
	print("[ResultScreenImproved] Initializing...")

	# ColorSystem ì ìš©
	SceneColorUpdater.apply_color_system_to_scene(self)

	# ë°˜ì‘í˜• ë ˆì´ì•„ì›ƒ ìˆ˜ì •
	ResponsiveLayoutFixer.fix_scene_layout(self)

	# í„°ì¹˜ í”¼ë“œë°± ì ìš©
	# TouchFeedback class doesn't exist - TODO: implement if needed

	# ë²„íŠ¼ ì—°ê²°
	_connect_buttons()

	# ê²°ê³¼ ë°ì´í„° ë¡œë“œ
	_load_result_data()


func _connect_buttons():
	if continue_button:
		continue_button.pressed.connect(_on_continue_pressed)
		print("[ResultScreenImproved] Continue button connected")
	else:
		print("[ResultScreenImproved] Continue button not found!")


func _load_result_data():
	# GameManagerì—ì„œ ê²°ê³¼ ì •ë³´ ê°€ì ¸ì˜¤ê¸°
	if GameManager:
		result_data = GameManager.get_last_result()

	# ê¸°ë³¸ ê²°ê³¼ ì„¤ì •
	if result_data.is_empty():
		result_data = {"type": "training", "title": "í›ˆë ¨ ê²°ê³¼", "description": "í›ˆë ¨ì„ ì™„ë£Œí–ˆìŠµë‹ˆë‹¤.", "stats_changed": {}}

	# UI ì—…ë°ì´íŠ¸
	_update_result_display()


func _update_result_display():
	if result_title:
		result_title.text = result_data.get("title", "ê²°ê³¼")

	if result_message:
		var description = result_data.get("description", "ì‘ì—…ì´ ì™„ë£Œë˜ì—ˆìŠµë‹ˆë‹¤.")
		result_message.text = description

	# TODO: ì¶”í›„ MainContentì˜ BeforeAfterPanelì„ í™œìš©í•´ì„œ ì‹œê°ì ìœ¼ë¡œ í‘œì‹œ


func _format_team_training_result() -> String:
	"""íŒ€í›ˆë ¨ ê²°ê³¼ë¥¼ í¬ë§·íŒ…"""
	var text = ""

	# í›ˆë ¨ íƒ€ì…
	var training_type = result_data.get("training_type", "ì•Œ ìˆ˜ ì—†ìŒ")
	text += "[center][font_size=24][b]%s í›ˆë ¨[/b][/font_size][/center]\n\n" % training_type

	# ë©”ì‹œì§€
	var description = result_data.get("description", "")
	if description != "":
		text += "[center]%s[/center]\n\n" % description

	text += "[color=yellow]â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”[/color]\n\n"

	# ëŠ¥ë ¥ì¹˜ ë³€í™”
	var stats_changed = result_data.get("stats_changed", {})
	if not stats_changed.is_empty():
		text += "[font_size=20][b]ğŸ“ˆ ëŠ¥ë ¥ì¹˜ ìƒìŠ¹[/b][/font_size]\n"
		for stat_name in stats_changed:
			var delta = stats_changed[stat_name]
			if delta > 0:
				text += "  â€¢ %s: [color=green]+%.1f[/color]\n" % [_translate_stat_name(stat_name), delta]
		text += "\n"

	# ì²´ë ¥ ì†Œëª¨
	var fatigue_cost = result_data.get("fatigue_cost", 0)
	if fatigue_cost > 0:
		text += "[font_size=20][b]ğŸ˜´ ì²´ë ¥ ì†Œëª¨[/b][/font_size]\n"
		text += "  â€¢ í”¼ë¡œë„: [color=orange]+%d[/color]\n\n" % fatigue_cost

	# ê´€ê³„ë„ ë³€í™”
	var coach_rel = result_data.get("coach_relationship", 0)
	var team_chem = result_data.get("team_chemistry", 0)

	if coach_rel != 0 or team_chem != 0:
		text += "[font_size=20][b]ğŸ¤ ê´€ê³„ë„ ë³€í™”[/b][/font_size]\n"
		if coach_rel > 0:
			text += "  â€¢ ê°ë… ê´€ê³„: [color=green]+%.1f[/color]\n" % coach_rel
		if team_chem > 0:
			text += "  â€¢ íŒ€ ì¼€ë¯¸ìŠ¤íŠ¸ë¦¬: [color=green]+%.1f[/color]\n" % team_chem
		text += "\n"

	text += "[color=yellow]â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”[/color]\n\n"
	text += "[center][color=gray]ê³„ì†í•˜ë ¤ë©´ ë²„íŠ¼ì„ ëˆ„ë¥´ì„¸ìš”[/color][/center]"

	return text


func _translate_stat_name(stat: String) -> String:
	"""ëŠ¥ë ¥ì¹˜ ì´ë¦„ í•œê¸€ ë²ˆì—­"""
	var translations = {
		"finishing": "ê²°ì •ë ¥",
		"long_shots": "ì¤‘ê±°ë¦¬ìŠ›",
		"passing": "íŒ¨ìŠ¤",
		"crossing": "í¬ë¡œìŠ¤",
		"dribbling": "ë“œë¦¬ë¸”",
		"ball_control": "ë³¼ì»¨íŠ¸ë¡¤",
		"tackling": "íƒœí´",
		"marking": "ë§ˆí‚¹",
		"heading": "í—¤ë”©",
		"positioning": "í¬ì§€ì…”ë‹",
		"stamina": "ìŠ¤íƒœë¯¸ë‚˜",
		"strength": "í˜",
		"pace": "ìŠ¤í”¼ë“œ",
		"acceleration": "ê°€ì†ë„",
		"agility": "ë¯¼ì²©ì„±",
		"balance": "ë°¸ëŸ°ìŠ¤",
		"jumping": "ì í”„ë ¥",
		"vision": "ì‹œì•¼",
		"composure": "ì¹¨ì°©ì„±",
		"aggression": "ì ê·¹ì„±",
		"teamwork": "íŒ€ì›Œí¬",
		"work_rate": "í™œë™ëŸ‰",
		"leadership": "ë¦¬ë”ì‹­",
		"technique": "ê¸°ìˆ "
	}

	return translations.get(stat, stat)


func _on_continue_pressed():
	print("[ResultScreenImproved] Continue button pressed")

	# ê²°ê³¼ íƒ€ì…ì— ë”°ë¼ ë‹¤ë¥¸ í™”ë©´ìœ¼ë¡œ ì´ë™
	var result_type = result_data.get("type", "training")

	match result_type:
		"training", "team_training":
			get_tree().change_scene_to_file("res://scenes/HomeImproved.tscn")
		"match":
			get_tree().change_scene_to_file("res://scenes/HomeImproved.tscn")
		_:
			get_tree().change_scene_to_file("res://scenes/HomeImproved.tscn")
